# robust-rust

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-0311353bf77c748322b60832dea8153e31260a0ea6c94d0f139de509d70956a3.json  query-a75a46104556db31620e33896c7dbe3a7702cbdc4dcb5f5c148f141f5ba26c20.json  query-aa049fe83d06fa0f486db03797a8f8839e6f605e3368abcb2a2656a83346788c.json  query-b1b22ecd3b4b003b44968adc6750639ffcf7a88e14327077efc4cf02d17357cf.json  query-d349274598c314301d3caa86e75884f6b953b283a98433bf3fe5b1ad350c63f9.json
configuration/: base.yml  production.yml
migrations/: 20230619112026_make_status_not_null_in_subscriptions.sql  20230710064356_seed_user.sql  20230716160608_create_idempotency_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
