[package]
name = "robust-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "robust-rust"

[dependencies]
actix-web = "4"
actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.163", features = ["derive"]}
serde-aux = "4.2.0" 
config = {version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1.3.3", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
unicode-segmentation = "1"
validator = "0.16.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "cookies"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
argon2 = { version = "0.3", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
base64 = "0.21.0"

[dev-dependencies]
once_cell = "1"
claim = "0.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
fake = "2.6.1"
wiremock = "0.5.19"
serde_json = "1"
linkify = "0.8.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1